# picozip

./: .gitignore  LICENSE  README.md  meson.build  meson_options.txt  picozip.c  picozip.h
.github/workflows/: ci.yml
examples/: meson.build  simple.c
tests/: meson.build  test2.txt  tests.c
